--- a/index.html
+++ b/index.html
@@ -860,6 +860,11 @@
   .info-text {
     display: block;
   }
+
+  .small-note {
+  font-size: 0.8em; /* お好みで調整（例：0.7em や 12px） */
+  color: #ffffff;      /* 任意：少し薄いグレーなど */
+}
     </style>
 </head>
 
@@ -886,14 +891,14 @@
         <input type="tel" id="phone" placeholder="電話番号を入力してください" oninput="saveInput('phone')">
 
         <div class="highlight-background">
-            <div class="kibounitizi">希望日時<span class="required">必須</span></div>
+            <div class="kibounitizi">撮影希望日<span class="required">必須</span></div>
         </div>
 
         <!-- カスタム placeholder 表示用 -->
-        <div class="datetime-wrapper" style="text-align: center;">
-            <span class="placeholder" id="placeholder1">⇩タップして日時を入力⇩</span>
-            <input type="datetime-local" id="date1" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
-        </div>
+<div class="datetime-wrapper" style="text-align: center;">
+    <span class="placeholder" id="placeholder1">⇩タップして日付を入力⇩</span>
+    <input type="date" id="date1" class="datetime-input" placeholder=" " aria-label="タップして日付を入力">
+</div>
 
         <div class="highlight-background">
             <span class="kibounitizi">第2希望日<span class="required">必須</span></span>
@@ -902,7 +907,7 @@
         <!-- カスタム placeholder 表示用 -->
         <div class="datetime-wrapper" style="text-align: center;">
             <span class="placeholder" id="placeholder2">⇩タップして日時を入力⇩</span>
-            <input type="datetime-local" id="date2" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
+            <input type="date" id="date2" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
         </div>
 
         <div class="highlight-background">
@@ -912,7 +917,7 @@
         <!-- カスタム placeholder 表示用 -->
         <div class="datetime-wrapper" style="text-align: center;">
             <span class="placeholder" id="placeholder3">⇩タップして日時を入力⇩</span>
-            <input type="datetime-local" id="date3" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
+            <input type="date" id="date3" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
         </div>
 
         <div class="label">プランをお選びください<span class="required">必須</span></div>
@@ -939,26 +944,29 @@
                 <button type="button" onclick="selectCaesareansection(this)">帝王切開</button>
             </div>
 
-        <div class="label">お子様のお名前（任意）</div>
-        <input type="text" id="mugwortsiblinginfo" placeholder="お子様のお名前（任意）を入力してください">
+        <div class="label">お子様のお名前（決まっていれば）</div>
+        <input type="text" id="mugwortsiblinginfo" placeholder="お子様のお名前を入力してください">
 
             <div class="label">お子様の性別<span class="required">必須</span></div>
             <div class="Freshflowerphotography-buttons">
-                <button type="button" onclick="selectFreshflowerphotography(this)">男</button>
-                <button type="button" onclick="selectFreshflowerphotography(this)">女</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">男の子</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">女の子</button>
                 <button type="button" onclick="selectFreshflowerphotography(this)">わからない</button>
             </div>
 
         <div class="label">出生体重（任意）</div>
         <input type="tel" id="birthweight" placeholder="出生体重を入力してください">
 
-            <div class="labelContent">ご兄弟情報<br>※いらっしゃらない場合は未記入で大丈夫です。（任意）</div>
+            <div class="labelContent">
+  ご兄弟情報（任意）<br>
+  <span class="small-note">※いらっしゃらない場合は未記入で大丈夫です。</span>
+</div>
             <div class="info-text">ご兄弟のお名前</div>
             <input type="text" id="mugwortmainkid" placeholder="ご兄弟のお名前をご記入ください">
             <div class="info-text">ご兄弟の性別</div>
             <div class="kimono-buttons">
-                <button type="button" onclick="selectkimono(this)">男性</button>
-                <button type="button" onclick="selectkimono(this)">女性</button>
+                <button type="button" onclick="selectkimono(this)">男の子</button>
+                <button type="button" onclick="selectkimono(this)">女の子</button>
                 <button type="button" onclick="selectkimono(this)">相談したい</button>
             </div>
             <div class="info-text">ご兄弟の年齢</div>
@@ -967,7 +975,7 @@
             <div class="labelnigyou">撮影に参加される方の<br>人数と続柄（任意）</div>
             <input type="text" id="mugwortshrinename" placeholder="撮影に参加される方の人数と続柄をご記入ください">
 
-            <div class="labelnigyou">生花撮影ご希望の有無<br>（スタジオのみ）（任意）</div>
+            <div class="labelnigyou">生花撮影ご希望の有無<span class="required">必須</span></div>
             <div class="hairmakeup-buttons">
                 <button type="button" onclick="selecthairmakeup(this)">有り</button>
                 <button type="button" onclick="selecthairmakeup(this)">無し</button>
@@ -981,7 +989,7 @@
                 <button type="button" onclick="selectpreparationphoto(this)">相談したい</button>
             </div>
 
-        <div class="labelContent">メッセージ<br>（質問等お気軽にご記入ください）</div>
+        <div class="labelContent">ご質問/ご相談</div>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
         <button class="submit-button" onclick="submitForm()" div id="section-message">送信</button>
@@ -1601,7 +1609,7 @@ function selectpreparationphoto(element) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n≪スタジオ ニューボーンフォト≫\n\n｟お名前｠\n・${formData.name}\n\n｟ご住所｠\n・${formData.Yourresidentialaddress}\n\n｟電話番号｠\n・${formData.phone}\n\n｟プラン｠\n・${formData.visitCount}\n\n｟出産予定日｠\n・${formatDateOnly(formData.dates[3])}\n\n｟自然分娩 or 帝王切開｠\n・${formData.CaesareansectionCount}\n\n｟お子様のお名前｠\n・${formData.mugwortsiblinginfo}\n\n｟お子様の性別｠\n・${formData.FreshflowerphotographyCount}\n\n｟お子様のお名前｠\n・${formData.birthweight}\n\n｟ご兄弟のお名前｠\n・${formData.mugwortmainkid}\n\n｟ご兄弟の性別｠\n・${formData.kimonoCount}\n\n｟ご兄弟の年齢｠\n・${formData.mugwortparticipants}\n\n｟撮影に参加される方｠\n・${formData.mugwortshrinename}\n\n｟生花撮影｠\n・${formData.hairmakeupCount}\n\n｟大人ヘアメイク｠\n・${formData.preparationphotoCount}\n\n【希望日時】\n｟第一希望日｠\n${formatDateWithTime(formData.dates[0])}\n\n｟第二希望日｠\n${formatDateWithTime(formData.dates[1])}\n\n｟第三希望日｠\n${formatDateWithTime(formData.dates[2])}\n\n｟メッセージ｠\n${formData.message}`
+                text: `【予約フォーム】\n≪スタジオ ニューボーンフォト≫\n\n｟お名前｠\n・${formData.name}\n\n｟ご住所｠\n・${formData.Yourresidentialaddress}\n\n｟電話番号｠\n・${formData.phone}\n\n｟プラン｠\n・${formData.visitCount}\n\n｟出産予定日｠\n・${formatDateOnly(formData.dates[3])}\n\n｟自然分娩 or 帝王切開｠\n・${formData.CaesareansectionCount}\n\n｟お子様のお名前｠\n・${formData.mugwortsiblinginfo}\n\n｟お子様の性別｠\n・${formData.FreshflowerphotographyCount}\n\n｟出生体重｠\n・${formData.birthweight}\n\n｟ご兄弟のお名前｠\n・${formData.mugwortmainkid}\n\n｟ご兄弟の性別｠\n・${formData.kimonoCount}\n\n｟ご兄弟の年齢｠\n・${formData.mugwortparticipants}\n\n｟撮影に参加される方｠\n・${formData.mugwortshrinename}\n\n｟生花撮影｠\n・${formData.hairmakeupCount}\n\n｟大人ヘアメイク｠\n・${formData.preparationphotoCount}\n\n【希望日時】\n｟第一希望日｠\n${formatDateWithTime(formData.dates[0])}\n\n｟第二希望日｠\n${formatDateWithTime(formData.dates[1])}\n\n｟第三希望日｠\n${formatDateWithTime(formData.dates[2])}\n\n｟メッセージ｠\n${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
