--- a/index.html
+++ b/index.html
@@ -185,6 +185,9 @@
         }
 
         .visit-buttons,
+        .kibou1-buttons,
+        .kibou2-buttons,
+        .kibou3-buttons,
         .Caesareansection-buttons,
         .hairmakeup-buttons,
         .kimono-buttons,
@@ -201,6 +204,9 @@
         }
 
         .visit-buttons button,
+        .kibou1-buttons button,
+        .kibou2-buttons button,
+        .kibou3-buttons button,
         .Caesareansection-buttons button,
         .hairmakeup-buttons button,
         .kimono-buttons button,
@@ -222,6 +228,9 @@
         }
 
         .visit-buttons button.active,
+        .kibou1-buttons button.active,
+        .kibou2-buttons button.active,
+        .kibou3-buttons button.active,
         .Caesareansection-buttons button.active,
         .hairmakeup-buttons button.active,
         .kimono-buttons button.active,
@@ -900,6 +909,13 @@
     <input type="date" id="date1" class="datetime-input" placeholder=" " aria-label="タップして日付を入力">
 </div>
 
+        <div class="label">希望時間<span class="required">必須</span></div>
+        <div class="kibou1-buttons">
+            <button type="button" id="firstkibou1" onclick="selectkibou1(this)">10時</button>
+            <button type="button" id="repeatkibou1" onclick="selectkibou1(this)">13時</button>
+            <button type="button" id="sankibou1" onclick="selectkibou1(this)">相談したい</button>
+        </div>
+
         <div class="highlight-background">
             <span class="kibounitizi">第2希望日<span class="required">必須</span></span>
         </div>
@@ -910,6 +926,13 @@
             <input type="date" id="date2" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
         </div>
 
+        <div class="label">希望時間<span class="required">必須</span></div>
+        <div class="kibou2-buttons">
+            <button type="button" id="firstkibou2" onclick="selectkibou2(this)">10時</button>
+            <button type="button" id="repeatkibou2" onclick="selectkibou2(this)">13時</button>
+            <button type="button" id="sankibou2" onclick="selectkibou2(this)">相談したい</button>
+        </div>
+
         <div class="highlight-background">
             <span class="kibounitizi">第3希望日※任意</span>
         </div>
@@ -918,6 +941,13 @@
         <div class="datetime-wrapper" style="text-align: center;">
             <span class="placeholder" id="placeholder3">⇩タップして日時を入力⇩</span>
             <input type="date" id="date3" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
+        </div>
+
+        <div class="label">希望時間<span class="required">必須</span></div>
+        <div class="kibou3-buttons">
+            <button type="button" id="firstkibou3" onclick="selectkibou3(this)">10時</button>
+            <button type="button" id="repeatkibou3" onclick="selectkibou3(this)">13時</button>
+            <button type="button" id="sankibou3" onclick="selectkibou3(this)">相談したい</button>
         </div>
 
         <div class="label">プランをお選びください<span class="required">必須</span></div>
@@ -998,6 +1028,9 @@
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
     <script>
         let visitCount = '';
+        let kibou1Count = '';
+        let kibou2Count = '';
+        let kibou3Count = '';
         let hairmakeupCount = '';
         let kimonoCount = '';
         let CaesareansectionCount = '';
@@ -1404,6 +1437,51 @@ function selectVisit(element) {
 }
 
 // 訪問回数の選択（初回・リピート）
+function selectkibou1(element) {
+    document.querySelectorAll('.kibou1-buttons button').forEach(btn => btn.classList.remove('active'));
+    element.classList.add('active');
+    kibou1Count = element.innerText;
+
+    // 選択された訪問回数に対応する時間を取得
+    selectedkibou1Time = kibou1Times[kibou1Count];
+
+    console.log('選択された訪問回数の時間:', selectedkibou1Time);
+
+    // カレンダーを更新するために取得する日付を渡す
+    fetchAvailability(currentDate);
+}
+
+// 訪問回数の選択（初回・リピート）
+function selectkibou2(element) {
+    document.querySelectorAll('.kibou2-buttons button').forEach(btn => btn.classList.remove('active'));
+    element.classList.add('active');
+    kibou2Count = element.innerText;
+
+    // 選択された訪問回数に対応する時間を取得
+    selectedkibou2Time = kibou2Times[kibou2Count];
+
+    console.log('選択された訪問回数の時間:', selectedkibou2Time);
+
+    // カレンダーを更新するために取得する日付を渡す
+    fetchAvailability(currentDate);
+}
+
+// 訪問回数の選択（初回・リピート）
+function selectkibou3(element) {
+    document.querySelectorAll('.kibou3-buttons button').forEach(btn => btn.classList.remove('active'));
+    element.classList.add('active');
+    kibou3Count = element.innerText;
+
+    // 選択された訪問回数に対応する時間を取得
+    selectedkibou3Time = kibou3Times[kibou1Count];
+
+    console.log('選択された訪問回数の時間:', selectedkibou3Time);
+
+    // カレンダーを更新するために取得する日付を渡す
+    fetchAvailability(currentDate);
+}
+
+// 訪問回数の選択（初回・リピート）
 function selectFreshflowerphotography(element) {
     document.querySelectorAll('.Freshflowerphotography-buttons button').forEach(btn => btn.classList.remove('active'));
     element.classList.add('active');
@@ -1575,7 +1653,7 @@ function selectpreparationphoto(element) {
         mugwortsiblinginfo: document.getElementById('mugwortsiblinginfo').value.trim(),
         mugwortparticipants: document.getElementById('mugwortparticipants').value.trim(),
         mugwortshrinename: document.getElementById('mugwortshrinename').value.trim(),
-        visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount, CaesareansectionCount,
+        visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount, CaesareansectionCount, kibou1Count, kibou2Count, kibou3Count,
                 dates: [
                     document.getElementById('date1').value,
                     document.getElementById('date2').value,
@@ -1609,7 +1687,7 @@ function selectpreparationphoto(element) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n≪スタジオ ニューボーンフォト≫\n\n｟お名前｠\n・${formData.name}\n\n｟ご住所｠\n・${formData.Yourresidentialaddress}\n\n｟電話番号｠\n・${formData.phone}\n\n｟プラン｠\n・${formData.visitCount}\n\n｟出産予定日｠\n・${formatDateOnly(formData.dates[3])}\n\n｟自然分娩 or 帝王切開｠\n・${formData.CaesareansectionCount}\n\n｟お子様のお名前｠\n・${formData.mugwortsiblinginfo}\n\n｟お子様の性別｠\n・${formData.FreshflowerphotographyCount}\n\n｟出生体重｠\n・${formData.birthweight}\n\n｟ご兄弟のお名前｠\n・${formData.mugwortmainkid}\n\n｟ご兄弟の性別｠\n・${formData.kimonoCount}\n\n｟ご兄弟の年齢｠\n・${formData.mugwortparticipants}\n\n｟撮影に参加される方｠\n・${formData.mugwortshrinename}\n\n｟生花撮影｠\n・${formData.hairmakeupCount}\n\n｟大人ヘアメイク｠\n・${formData.preparationphotoCount}\n\n【希望日時】\n｟第一希望日｠\n${formatDateWithTime(formData.dates[0])}\n\n｟第二希望日｠\n${formatDateWithTime(formData.dates[1])}\n\n｟第三希望日｠\n${formatDateWithTime(formData.dates[2])}\n\n｟メッセージ｠\n${formData.message}`
+                text: `【予約フォーム】\n≪スタジオ ニューボーンフォト≫\n\n｟お名前｠\n・${formData.name}\n\n｟ご住所｠\n・${formData.Yourresidentialaddress}\n\n｟電話番号｠\n・${formData.phone}\n\n｟プラン｠\n・${formData.visitCount}\n\n｟出産予定日｠\n・${formatDateOnly(formData.dates[3])}\n\n｟自然分娩 or 帝王切開｠\n・${formData.CaesareansectionCount}\n\n｟お子様のお名前｠\n・${formData.mugwortsiblinginfo}\n\n｟お子様の性別｠\n・${formData.FreshflowerphotographyCount}\n\n｟出生体重｠\n・${formData.birthweight}\n\n｟ご兄弟のお名前｠\n・${formData.mugwortmainkid}\n\n｟ご兄弟の性別｠\n・${formData.kimonoCount}\n\n｟ご兄弟の年齢｠\n・${formData.mugwortparticipants}\n\n｟撮影に参加される方｠\n・${formData.mugwortshrinename}\n\n｟生花撮影｠\n・${formData.hairmakeupCount}\n\n｟大人ヘアメイク｠\n・${formData.preparationphotoCount}\n\n【希望日時】\n｟第一希望日｠\n${formatDateWithTime(formData.dates[0])}\n｟希望時間1｠\n・${formData.kibou1Count}\n\n｟第二希望日｠\n${formatDateWithTime(formData.dates[1])}\n｟希望時間2｠\n・${formData.kibou2Count}\n\n｟第三希望日｠\n${formatDateWithTime(formData.dates[2])}\n｟希望時間3｠\n・${formData.kibou3Count}\n\n｟メッセージ｠\n${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
