--- a/index.html
+++ b/index.html
@@ -1601,20 +1601,17 @@ if (treatmentId === 'treatment1') {
         optionalText += '\n≪照射≫：' + (formData.irradiationsCount || '');
     }
 
-            // LINEトークにメッセージを送信
-            liff.sendMessages([{
-                type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n\n≪メニュー項目≫\n⇒${formData.visitCount}\n≪メニュー≫\n⇒${formData.selectedSymptom}\n\n≪オフ有り≫：${formData.secondsecondanniversaryCount}\n≪長さだし≫：${formData.secondlongCount}\n≪アイシャンプー≫：${formData.secondshampooCount}\n\n【希望日時】\n・第一希望日\n${formatDate(formData.dates[0])}\n希望時間1：${formData.Desiredtime1Count}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n希望時間2：${formData.Desiredtime2Count}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n希望時間3：${formData.Desiredtime3Count}\n\nメッセージ：${formData.message}`
-            }]).then(() => {
-                /* メッセージ送信成功時の処理 */
-                alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
-                /* LIFFウィンドウを閉じる */
-                liff.closeWindow();
-            }).catch((err) => {
-                /* メッセージ送信失敗時の処理 */
-                console.error('メッセージの送信に失敗しました', err);
-            });
-        }
+    // LINEメッセージ送信
+    liff.sendMessages([{
+        type: 'text',
+        text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n\n≪メニュー項目≫\n⇒${formData.visitCount}\n≪メニュー≫\n⇒${formData.selectedSymptom}${optionalText}\n\n【希望日時】\n・第一希望日\n${formatDate(formData.dates[0])}\n希望時間1：${formData.Desiredtime1Count}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n希望時間2：${formData.Desiredtime2Count}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n希望時間3：${formData.Desiredtime3Count}\n\nメッセージ：${formData.message}`
+    }]).then(() => {
+        alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
+        liff.closeWindow();
+    }).catch((err) => {
+        console.error('メッセージの送信に失敗しました', err);
+    });
+}
 
         function formatDate(dateStr) {
             if (!dateStr) return '';
